--- a/medbook-bookingservice.env.example
+++ b/medbook-bookingservice.env.example
@@ -2,8 +2,14 @@ SERVER_PORT=3000
 SERVER_BODY_LIMIT=2000
 SERVER_TIMEOUT=2000
 
+JWT_PATIENT_SECRET="patient"
+JWT_PATIENT_REFRESH_SECRET="patientrefresh"
+JWT_DOCTOR_SECRET="doctor"
+JWT_DOCTOR_REFRESH_SECRET="doctorrefresh"
+
 POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=bookings_db
 
 DATABASE_URL=postgresql://{POSTGRESQL_USERNAME}:{POSTGRESQL_PASSWORD}@medbook-bookingservice-db:5432/{POSTGRESQL_DATABASE}?sslmode=disable
+
