--- a/medbook-userservice.env.example
+++ b/medbook-userservice.env.example
@@ -2,6 +2,11 @@ SERVER_PORT=3000
 SERVER_BODY_LIMIT=2000
 SERVER_TIMEOUT=2000
 
+JWT_PATIENT_SECRET="patient"
+JWT_PATIENT_REFRESH_SECRET="patientrefresh"
+JWT_DOCTOR_SECRET="doctor"
+JWT_DOCTOR_REFRESH_SECRET="doctorrefresh"
+
 POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=users_db
