fix env example database url

--- a/medbook-bookingservice.env.example
+++ b/medbook-bookingservice.env.example
@@ -11,5 +11,5 @@ POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=bookings_db
 
-DATABASE_URL=postgresql://{POSTGRESQL_USERNAME}:{POSTGRESQL_PASSWORD}@medbook-bookingservice-db:5432/{POSTGRESQL_DATABASE}?sslmode=disable
+DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@medbook-bookingservice-db:5432/${POSTGRESQL_DATABASE}?sslmode=disable
 
