--- a/medbook-userservice.env.example
+++ b/medbook-userservice.env.example
@@ -11,4 +11,4 @@ POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=users_db
 
-DATABASE_URL=postgresql://{POSTGRESQL_USERNAME}:{POSTGRESQL_PASSWORD}@medbook-userservice-db:5432/{POSTGRESQL_DATABASE}?sslmode=disable
+DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@medbook-userservice-db:5432/${POSTGRESQL_DATABASE}?sslmode=disable
