--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
       - "3000:80"
+    restart: unless-stopped
     depends_on:
       - medbook-userservice
       - medbook-bookingservice
