--- a/medbook-userservice.env.example
+++ b/medbook-userservice.env.example
@@ -1,6 +1,11 @@
+STAGE="local"
+
 SERVER_PORT=3000
 SERVER_BODY_LIMIT=2000
 SERVER_TIMEOUT=2000
+
+PRODUCTION_FRONTEND_URL="http://localhost:8080"
+DEVELOPMENT_FRONTEND_URL="http://localhost:8080"
 
 JWT_PATIENT_SECRET="patient"
 JWT_PATIENT_REFRESH_SECRET="patientrefresh"
