--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,8 @@ services:
     container_name: medbook-userservice
     restart: unless-stopped
     env_file:
-      - medbook-userservice.env
+      - medbook-userservice-development.env
+      - medbook-authtoken-development.env
     depends_on:
       - medbook-userservice-db
     networks:
@@ -40,7 +41,8 @@ services:
     container_name: medbook-bookingservice
     restart: unless-stopped
     env_file:
-      - medbook-bookingservice.env
+      - medbook-bookingservice-development.env
+      - medbook-authtoken-development.env
     depends_on:
       - medbook-bookingservice-db
     networks:
