--- a/medbook-userservice-development.env.example
+++ b/medbook-userservice-development.env.example
@@ -1,4 +1,4 @@
-STAGE="local"
+STAGE="development"
 
 SERVER_PORT=3000
 SERVER_BODY_LIMIT=2000
@@ -6,11 +6,6 @@ SERVER_TIMEOUT=2000
 
 PRODUCTION_FRONTEND_URL="http://localhost:8080"
 DEVELOPMENT_FRONTEND_URL="http://localhost:8080"
-
-JWT_PATIENT_SECRET="patient"
-JWT_PATIENT_REFRESH_SECRET="patientrefresh"
-JWT_DOCTOR_SECRET="doctor"
-JWT_DOCTOR_REFRESH_SECRET="doctorrefresh"
 
 POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
