--- a/medbook-bookingservice-dev.env.example
+++ b/medbook-bookingservice-dev.env.example
@@ -9,6 +9,7 @@ DEVELOPMENT_FRONTEND_URL="http://localhost:8080"
 
 POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
-POSTGRESQL_DATABASE=users_db
+POSTGRESQL_DATABASE=bookings_db
 
-DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@medbook-userservice-db:5432/${POSTGRESQL_DATABASE}?sslmode=disable
+DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@medbook-bookingservice-db-dev:5432/${POSTGRESQL_DATABASE}?sslmode=disable
+
