--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,4 +21,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    location /deliveries-service/ {
+        proxy_pass http://medbook-deliveryservice-dev:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
