--- a/medbook-inventoryservice-dev.env.example
+++ b/medbook-inventoryservice-dev.env.example
@@ -7,4 +7,5 @@ POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=inventory_db
 
+PATH_PREFIX=/inventory-service/
 DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOSTNAME}:5432/${POSTGRESQL_DATABASE}?sslmode=disable
