--- a/medbook-userservice-dev.env.example
+++ b/medbook-userservice-dev.env.example
@@ -8,4 +8,5 @@ POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=users_db
 
+PATH_PREFIX=/users-service/
 DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@medbook-userservice-db-dev:5432/${POSTGRESQL_DATABASE}?sslmode=disable
