--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -127,6 +127,8 @@ services:
     image: ghcr.io/pasobeso/medbook-deliveryservice:latest
     container_name: medbook-deliveryservice-dev
     restart: unless-stopped
+    ports:
+      - 3001:3000
     env_file:
       - medbook-deliveryservice-dev.env
       - medbook-rmq-dev.env
@@ -180,6 +182,7 @@ volumes:
   medbook_orderservice_data_dev:
   rabbitmq_data:
   cb_workspace:
+
 
 networks:
   api-backend:
