--- a/medbook-deliveryservice-dev.env.example
+++ b/medbook-deliveryservice-dev.env.example
@@ -8,3 +8,4 @@ POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=deliveries_db
 
 DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOSTNAME}:5432/${POSTGRESQL_DATABASE}?sslmode=disable
+PATH_PREFIX=/deliveries-service/
