--- a/medbook-orderservice-dev.env.example
+++ b/medbook-orderservice-dev.env.example
@@ -7,6 +7,7 @@ POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=orders_db
 
+PATH_PREFIX=/orders-service/
 DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOSTNAME}:5432/${POSTGRESQL_DATABASE}?sslmode=disable
 
 INVENTORY_SERVICE_URL="http://medbook-inventoryservice-dev:3000"
