--- a/medbook-bookingservice-dev.env.example
+++ b/medbook-bookingservice-dev.env.example
@@ -2,9 +2,10 @@ SERVER_PORT=3000
 SERVER_BODY_LIMIT=2000
 SERVER_TIMEOUT=2000
 
+POSTGRESQL_HOSTNAME="medbook-bookingservice-db-dev"
 POSTGRESQL_USERNAME=myuser
 POSTGRESQL_PASSWORD=mypassword
 POSTGRESQL_DATABASE=bookings_db
 
-DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@medbook-bookingservice-db-dev:5432/${POSTGRESQL_DATABASE}?sslmode=disable
-
+DATABASE_URL=postgresql://${POSTGRESQL_USERNAME}:${POSTGRESQL_PASSWORD}@${POSTGRESQL_HOSTNAME}:5432/${POSTGRESQL_DATABASE}?sslmode=disable
+PATH_PREFIX=/bookings-service/
